fix: for z-index of performance panel

--- a/packages/bot-web-ui/src/components/run-panel/run-panel.scss
+++ b/packages/bot-web-ui/src/components/run-panel/run-panel.scss
@@ -16,7 +16,7 @@
             top: 0;
             left: 0;
             width: 100vw;
-            z-index: 99;
+            z-index: 98;
 
             &-closed {
                 position: unset;
